<resources>
    <string name="app_name" translatable="false">MyanmarCurrencyExchangeRate</string>
    <string name="title_activity_main_drawer" translatable="false">MainDrawerActivity</string>
    <string name="app_launcher_name">CBM-Exchange</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ex_load_error_message">Oop! No data found.</string>
    <string name="no_internet">Oop! No Internet Connection.</string>

    <string name="ex_choose_date_label">Choose Date</string>

    <string name="ex_header_cur_type">Currency Type</string>
    <string name="ex_header_ex_rate">Exchange Rate(MMR)</string>

    <string name="country">Country</string>
    <string name="value">Value</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="cd_value">1/=K</string>

    <string name="label_central_bank">Central Bank</string>

    <string name="label_exchange_list">Exchange List</string>
    <string name="label_currency_list">Currency List</string>
    <string name="label_setting">Setting</string>

    <string name="label_change_language">Change Language</string>

    <string name="label_en" translatable="false">EN</string>
    <string name="label_mm">MM</string>
</resources>
